# ai-book-writer

./: .coverage  .gitignore  README.md  pyproject.toml  test_crawling.py  test_crawling_with_browserless.py  write_book_ollama.py
src/: local-ollama-chatgpt.py
src/ai_book_writer/: __init__.py  book_formatter.py  book_writer.py  ollama_helpers.py  webtools.py  write_book_fixed.py
src/ai_book_writer/prompts/blog/: chapter_instructions.txt  outline_instructions.txt  system_prompt.txt
src/ai_book_writer/prompts/horror/: chapter_instructions.txt  outline_instructions.txt  system_prompt.txt
src/ai_book_writer/prompts/programming/: chapter_instructions.txt  outline_instructions.txt  system_prompt.txt
src/ai_book_writer/prompts/scifi/: chapter_instructions.txt  outline_instructions.txt  system_prompt.txt
src/ai_book_writer/prompts/technical/: chapter_instructions.txt  outline_instructions.txt  system_prompt.txt
src/ai_book_writer/templates/: book_template.html
test_results/: test_report.md
tests/: __init__.py  test_webtools.py
