[tool.poetry]
name = "ai-book-writer"
version = "0.1.0"
description = "AI-Powered Book Writer using Crawl4AI and Gemma 3"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ai_book_writer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.10.1"
crawl4ai = ">=0.5.0"
ollama = ">=0.1.5"
requests = ">=2.31.0"
markdown = ">=3.5.1"
tqdm = ">=4.66.1"
rich = ">=13.6.0"
jinja2 = ">=3.1.2"
asyncio = ">=3.4.3"
beautifulsoup4 = ">=4.12.2"
weasyprint = {version = ">=60.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
vulture = "^2.7"

[tool.poetry.extras]
pdf = ["weasyprint"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.poetry.scripts]
book-writer = "ai_book_writer.book_writer:main"
