[tool.poetry]
name = "ai-book-writer"
version = "0.1.0"
description = "AI-Powered Book Writer using Crawl4AI and Gemma 3"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ai_book_writer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.10.1"
crawl4ai = ">=0.5.0"
ollama = ">=0.1.5"
requests = ">=2.31.0"
markdown = ">=3.5.1"
tqdm = ">=4.66.1"
rich = ">=13.6.0"
jinja2 = ">=3.1.2"
asyncio = ">=3.4.3"
beautifulsoup4 = ">=4.12.2"
weasyprint = {version = ">=60.1", optional = true}
duckduckgo-search = "^7.5.2"
pytest = "^7.3.1"
chardet = "^5.2.0"
pydantic-settings = "^2.8.1"
tldextract = "^5.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
vulture = "^2.7"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pylint = "^3.0.1"

[tool.poetry.extras]
pdf = ["weasyprint"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.poetry.scripts]
book-writer = "ai_book_writer.book_writer:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ai_book_writer --cov-report=html --cov-report=term-missing"

[tool.pylint.messages_control]
disable = ["C0111", "C0103"]

[tool.coverage.run]
source = ["ai_book_writer"]
omit = ["tests/*"]
